<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_horario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumnedam.horario.horario">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:text="@string/saludos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saludos"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saludos2"
                android:layout_marginStart="28dp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:text="@string/asignatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAsignatura"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAsignatura2"
                android:layout_marginStart="28dp" />

            </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:text="@string/hora_fi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHoraIn"
                android:layout_gravity="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHoraIn2"
                android:layout_gravity="center"

                android:layout_marginStart="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">


            <TextView
                android:text="@string/hora_inici"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHoraFi"
                android:layout_gravity="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHoraFi2"
                android:layout_gravity="center"

                android:layout_marginStart="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">


            <TextView
                android:text="@string/profesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProfessor"

                android:layout_gravity="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProfessor2"
                android:layout_gravity="center"

                android:layout_marginStart="20dp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">


            <TextView
                android:text="@string/clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvClasse"

                android:layout_gravity="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvClasse2"
                android:layout_gravity="center"
                android:layout_marginStart="20dp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">


            <TextView
                android:text="@string/dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDia"
                android:layout_gravity="center"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDia2"
                android:layout_gravity="center"
                android:layout_marginStart="20dp" />

        </TableRow>

    </TableLayout>


</LinearLayout>
